# RainMaker

./: README.md  collector.py  main.py  plot.py  pyproject.toml
.github/workflows/: main.yml
libraries/analyzer/: chart.py
libraries/exchanges/bitflyer/: __init__.py  client.py  enumerations.py  models.py  responses.py
libraries/signals/: __init__.py  rsi.py  sma.py
libraries/signals/support_resistance/: __init__.py  _abc.py  fractal.py  kmeans.py  window_shifting.py
tests/test_bitflyer/: conftest.py  test_client.py  test_enumerations.py  test_responses.py
