[tool.poetry]
name = "rainmaker"
version = "0.1.0"
description = ""
authors = ["studio3104 <studio3104.com@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
requests = "^2.26.0"
TA-Lib = "^0.4.21"
numpy = "^1.21.3"
matplotlib = "3.4.3"
pandas = "^1.3.4"
pynamodb = "^5.1.0"
websocket-client = "^1.2.1"

[tool.poetry.dev-dependencies]
coverage = "^6.1"
pytest = "^6.2.5"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
